# barb_loja_django

./: .gitignore  .replit  Dockerfile  Procfile  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt
accounts/: views.py
accounts/templates/accounts/: login.html  register.html
barb/: admin.py  apps.py  form.py  models.py  serializers.py  urls.py  views.py
barb/migrations/: 0001_initial.py  0002_product_upload.py  0003_auto_20210808_1510.py  0004_product_vendido.py  0005_auto_20211001_1409.py
barb/static/css/: style.css
barb/static/js/: pagination.js  script.js
barb/templates/: base.html
barb/templates/barb/: addprod.html  allprods.html  editprod.html  index.html  product-list.html  viewprod.html
barb/tests/: tests_views.py
barbarosa/: asgi.py  settings.py  urls.py  wsgi.py
billing/migrations/: 0001_initial.py
card/: urls.py  views.py
card/templates/card/: card.html
card/tests/: tests_views.py
cart/: admin.py  models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_auto_20210729_1802.py  0003_qnty.py  0004_auto_20210813_0912.py  0005_qnty_products.py  0006_qnty_total.py  0007_auto_20210816_1046.py  0008_auto_20210816_1047.py
cart/templates/cart/: cart_detail.html  checkout.html
cart/tests/: tests_view.py
orders/: models.py
orders/migrations/: 0001_initial.py  0002_order_total.py
